k8s-deployment-proweb-webwsc-www-sit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proweb-webwsc-uat-www
  namespace: proweb-webwsc-uat-www-ns
  labels:
    app: proweb-webwsc-uat-www
    Environment: UAT
    Owner: DigitalChannels
    ProjectName: whitesandcove
spec:
  replicas: 1
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
  selector:
    matchLabels:
      app: proweb-webwsc-uat-www
  template:
    metadata:
      annotations:
        k8s.aliyun.com/eci-sls-enable: "true"
        k8s.aliyun.com/acr-service-arns: "acs:ram::5725926127090411:role/k8s-uat-acr-access"
      labels:
        app: proweb-webwsc-uat-www
    spec:
      containers:
      - name: proweb-webwsc-uat-www
        # image: registry.cn-hangzhou.aliyuncs.com/acs-sample/nginxdemos:latest
        image: proweb-acr-registry-vpc.cn-hongkong.cr.aliyuncs.com/proweb-uat/proweb-webwsc-uat-www-acr-repo:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1024Mi"  # Initial memory request
            cpu: "256m"       # Initial CPU request
          limits:
            memory: "1024Mi"  # Maximum memory allowed
            cpu: "256m"       # Maximum CPU allowed
        volumeMounts:
        - name: proweb-webwsc-uat-www-oss-pvc
          mountPath: "/mnt/oss"
        # - name: proweb-webwsc-uat-nas-pvc
        #   mountPath: "/mnt/oss"
      volumes:
      - name: proweb-webwsc-uat-www-oss-pvc
        persistentVolumeClaim:
          claimName: proweb-webwsc-uat-www-oss-pvc
      # - name: proweb-webwsc-uat-nas-pvc
      #   persistentVolumeClaim:
      #     claimName: proweb-webwsc-uat-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: proweb-webwsc-uat-www-service
  namespace: proweb-webwsc-uat-www-ns
  labels:
    app: proweb-webwsc-uat-www-service
spec:
  selector:
    app: proweb-webwsc-uat-www
  sessionAffinity: None
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proweb-webwsc-uat-www-ingress
  namespace: proweb-webwsc-uat-www-ns
  labels:
    ingress: proweb-webwsc-uat-www-ingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-enabled: "true"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-httpversion: "HTTP1.1"
    alb.ingress.kubernetes.io/healthcheck-method: "HEAD"
    alb.ingress.kubernetes.io/healthcheck-code: "http_2xx,http_3xx"
    alb.ingress.kubernetes.io/healthcheck-httpcode: "http_2xx,http_3xx"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/healthcheck-connect-port: "80"
spec:
  ingressClassName: k8s-alb-https
  rules:
    - host: www-sit.whitesandcove.com.hk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proweb-webwsc-uat-www-service
              port:
                number: 80
  tls:
  - hosts: 
    - www-sit.whitesandcove.com.hk
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-any-any
  namespace: proweb-webwsc-uat-www-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - {}
